GNOME Bugzilla – Bug 747182
Updates installed notification doesn't need an "OK" button
Last modified: 2015-05-11 09:51:21 UTC
After you install updates, Software shows an notification. This has two buttons: "Review" and "OK". The "OK" button serves no purpose - you can already dismiss the notification with the close button.
Thanks, fixed in https://git.gnome.org/browse/gnome-software/commit/?id=d54f269b3b1837c800cb0e0f0ed39e5f633d67cb