Remove redundant "OK" button from the updates installed notification

https://bugzilla.gnome.org/show_bug.cgi?id=747182